<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/out"
        android:layout_width="136dp"
        android:layout_height="40dp"
        android:layout_marginTop="65dp"
        android:text="@string/title"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="264dp"
        android:layout_height="62dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/tip1"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.715"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="82dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="149dp"
        android:text="@string/id"
        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="82dp"
        android:layout_height="29dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="75dp"
        android:text="@string/psw"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="273dp"
        android:layout_height="73dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/tip2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="244dp"
        android:layout_height="72dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="32dp"
        android:text="@string/btw"
        android:onClick="myClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

</androidx.constraintlayout.widget.ConstraintLayout>